[WIP]build with jpa