@@ -54,7 +54,8 @@ afterEvaluate {
             options.sourcepath = files(sourceSets.main.java.srcDirs)
 
             options.encoding = "UTF-8"
-            options.compilerArgs += [
+            options.compilerArgs = [
+//                    '--module-source-path', sourceSets.main.java.srcDirs,
                     '--module-path', classpath.asPath,
             ]
             classpath = files()
@@ -69,7 +70,10 @@ afterEvaluate {
         doFirst {
             jvmArgs += [
                     "--module-path", classpath.asPath,
-                    "--add-modules", "java.sql",
+//                    "--add-modules", "java.sql",
+//                    "--add-exports", "java.sql/java.sql=ALL-UNNAMED",
+//                    "--add-reads", "java.sql=ALL-UNNAMED",
+//                    "--add-modules", "java.xml.bind",
                     "--module", "soudegesu.springboot.jdknine.main.demo/soudegesu.springboot.jdknine.main.demo.DemoApplication",
                     "-X"
             ]
@@ -86,7 +90,7 @@ ext {
 
 dependencies {
     // springboot
-//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
 //    compile('org.springframework.boot:spring-boot-starter-security')
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
     implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
@@ -95,15 +99,12 @@ dependencies {
 
     implementation "org.springframework.boot:spring-boot-starter-jetty:${springBootVersion}"
     // database
-//    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'
-
-//    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
-//    compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.2.6'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'
 
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
 //    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
 
-//    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 //    testImplementation('org.springframework.security:spring-security-test')
 }
 
